objects/Criteria_Line_Item__mdt.object
<CustomObject>
    <description>This is the Custom Metadata for Criteria Line Items linking to other Metadata records for conditionality on that record.
Must be accompanied by a field that indicates the logic equation of the items. (IE - 1 OR 2 AND 3)</description>
    <fields>
        <fullName>Badge__c</fullName>
        <description>Indicates the Badge this criteria is for</description>
        <label>Badge</label>
        <referenceTo>Badge__mdt</referenceTo>
        <relationshipLabel>Criteria Line Items</relationshipLabel>
        <relationshipName>Criteria_Line_Items</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Field_Api_Path__c</fullName>
        <description>Api path from the Parent object indicated on the Related field</description>
        <inlineHelpText>Api path from the Parent object indicated on the Related field</inlineHelpText>
        <label>Field Api Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>Operator to equate</description>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                    <default>true</default>
                    <label>=</label>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
                <value>
                    <fullName>Does Not Contain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value to compare the value in the field to</description>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Criteria Line Item</label>
    <pluralLabel>Criteria Line Items</pluralLabel>
</CustomObject>